# case-problem-mercedez

./: .gitignore  README.md  config.json  config_validation.json  pyproject.toml  tox.ini
data/: arima_forecast.csv  arima_validation_forecast.csv  sarimax_forecast.csv  sarimax_validation_forecast.csv
notebooks/: analysis.ipynb
src/: pipeline.py  postprocessing.py  preprocessing.py  utils.py  visualizations.py
src/analysis/: __init__.py  analysis.py  stats_tests.py
src/containers/: __init__.py  containers.py
src/evaluation/: metrics.py
src/modeling/: __init__.py  forecaster.py  grid_search.py
src/pipeline/: tasks.py
tests/: test_pipeline.py
