[tool.poetry]
name = "forecaster"
version = "0.1.0"
description = "Forecasting"
authors = ["Cristobal Vasquez"]
repository = "https://github.com/cristobalvasquezf/case-problem-mercedez.git"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
pandas = "~2.0.3"
sktime = "^0.28.0"
statsmodels = "^0.14.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
pydantic = "^2.7.1"
prefect = "^2.18.0"
fire = "^0.6.0"
argparse = "^1.4.0"
scipy = "^1.13.0"


[tool.poetry.group.test.dependencies]
# Testing
coverage = "6.5.0"
pytest-cov = "4.0.0"
pytest = "7.2.0"
# Formatting, linting, pre-commit hook
black = "23.1.0"


[tool.poetry.group.research.dependencies]
prophet = "^1.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = "-ra"
testpaths = [
    "tests",
]
python_files = "test_*.py"
junit_family = "legacy"

[tool.coverage.run]
branch = true
command_line = '-m pytest'
source = ['src/']

[tool.coverage.report]
precision = 2
skip_covered = true
fail_under = 50
